# NoPrint

./: LICENSE  README.md  README_en.md  pyproject.toml
noprint/: __init__.py  logger.py
tests/: test_noprint.py
