[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "NoPrint"
version = "0.1.0"
description = "A tiny multi-format logging helper for Python scripts."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "NoPrint Contributors" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools.packages.find]
include = ["noprint*"]
